--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -5,8 +5,9 @@
     "outDir": "./out-tsc/spec",
     "types": [
       "jasmine"
-    ]
+    ],
   },
+  "strictPropertyInitialization": false,
   "files": [
     "src/test.ts",
     "src/polyfills.ts"
